--- a/src/Pages/Inicio1/components/HeaderInicio1/HeaderInicio1.css
+++ b/src/Pages/Inicio1/components/HeaderInicio1/HeaderInicio1.css
@@ -55,6 +55,7 @@
 .HeaderInicio1_acciones {
     display: flex;
     align-items: center;
+    position: relative;
 }
 
 .HeaderInicio1_btn_notif {
@@ -76,15 +77,21 @@
     background: rgba(255, 255, 255, 0.08);
 }
 
-.HeaderInicio1_notif_punto {
+.HeaderInicio1_notif_badge {
     position: absolute;
-    top: 0.8em;
-    right: 0.8em;
-    width: 0.6em;
-    height: 0.6em;
+    top: -0.5em;
+    right: -0.5em;
+    min-width: 1.5em;
+    height: 1.5em;
     background-color: #FF073A;
-    border-radius: 50%;
-    border: 1px solid #0a0a0a;
+    border-radius: 999px;
+    color: white;
+    font-size: 0.7em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0.2em;
+    box-shadow: 0 0 10px rgba(255, 7, 58, 0.4);
 }
 
 @media screen and (min-width: 1024px) {
