--- a/src/Pages/Inicio1/components/ModalAddCasino/ModalAddCasino.css
+++ b/src/Pages/Inicio1/components/ModalAddCasino/ModalAddCasino.css
@@ -84,7 +84,7 @@
     border: 1px solid rgba(255, 255, 255, 0.08);
     border-radius: 1em;
     padding: 1em 1.2em;
-    color: white;
+    color: grey;
     font-family: inherit;
     font-size: 0.9em;
     outline: none;
